{
    "name": "InputController",
    "maps": [
        {
            "name": "Player",
            "id": "3d4e2903-f7f0-42dc-94eb-25e4f8de8589",
            "actions": [
                {
                    "name": "Movement",
                    "type": "PassThrough",
                    "id": "134aaf8c-c437-496b-ab16-0f6abc1678f0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "9243db70-9cba-4184-b05e-9e671daabef4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "8dbc07f9-243c-48eb-abda-f37c95e51522",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "PreviousSlime",
                    "type": "Button",
                    "id": "cf7dbe6a-a5b8-41be-9d70-674356850064",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "NextSlime",
                    "type": "Button",
                    "id": "e258148b-3cb0-4d77-babe-db3399904d04",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Detonate",
                    "type": "Button",
                    "id": "e21efd2a-55cc-4568-902e-4be003d34920",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold(duration=1.5)"
                },
                {
                    "name": "Sticky",
                    "type": "Button",
                    "id": "371dea35-148e-4d4c-9cd0-6f7b2e14f2c0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold(duration=1.5)"
                },
                {
                    "name": "IceBeam",
                    "type": "Button",
                    "id": "f441ac96-17c8-4327-b776-5986398e0880",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold(duration=1.5)"
                },
                {
                    "name": "ReturnToCore",
                    "type": "Button",
                    "id": "0fec4295-faf4-4eaf-9965-4cee9d7a70de",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold(duration=1.5)"
                },
                {
                    "name": "Combine",
                    "type": "Button",
                    "id": "696eb2fd-fb3f-4dfb-9efd-0e142a1b1d8b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold(duration=1.5)"
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "470504dd-3330-4f80-a8a0-ba9738073289",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard/Mouse",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d4e35386-2950-4ac6-b852-4f2c87068cfd",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard/Mouse",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6cdbb591-71c3-4e10-82c0-747bdd40a497",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard/Mouse",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "20caef5b-cf3d-4776-b5ef-22f650b8892f",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3032d133-5c4f-4589-8d98-a06430c9cdbe",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard/Mouse",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ad94ad9f-9118-4a64-b07c-98bf23421615",
                    "path": "<Gamepad>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Left Stick",
                    "id": "0399eda0-7bc3-4d4d-8bc5-651f9f2f8e5e",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "77f4d616-d71f-47db-a4a1-b42a9525a702",
                    "path": "<Gamepad>/leftStick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "49108905-1f11-4e0f-b5a2-51650a963a74",
                    "path": "<Gamepad>/leftStick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "WASD",
                    "id": "18a3d52f-c764-46b2-ab1e-910da42562e7",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "2045d7fd-16d1-49fb-9b57-ab1aece22881",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard/Mouse",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "6467d39f-c835-4563-a8a2-74bacd9207c5",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard/Mouse",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "50caa068-64d8-4841-b669-e1aea9995894",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard/Mouse",
                    "action": "PreviousSlime",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ed8e2f65-0136-4cf8-b743-0137289e0481",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard/Mouse",
                    "action": "NextSlime",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3cabfe59-721a-4b80-ac7f-72bff6b32d45",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard/Mouse",
                    "action": "Detonate",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bc45f086-8037-4ef6-a643-1b5704a10fb5",
                    "path": "<Keyboard>/ctrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard/Mouse",
                    "action": "Sticky",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3a463acc-69a1-41b4-9d75-0da2dfc24940",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard/Mouse",
                    "action": "IceBeam",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9a207a70-7828-4c8e-9657-a17d5db3ba68",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard/Mouse",
                    "action": "ReturnToCore",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "33f39078-50d1-43cc-b275-fe508edf58dd",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard/Mouse",
                    "action": "Combine",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Testing",
            "id": "1caa4020-a621-4a46-9106-5e3dac90e607",
            "actions": [
                {
                    "name": "Reset",
                    "type": "Button",
                    "id": "7de1ef84-b55e-444e-ad6b-88ad7b098b17",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "1b7ae760-6d97-430f-bc66-6d85355e931f",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard/Mouse",
                    "action": "Reset",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard/Mouse",
            "bindingGroup": "Keyboard/Mouse",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Gamepad",
            "bindingGroup": "Gamepad",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}